Can't fix the topnav class's to 50px because when the dropdown opens it won't be visible.

--- a/assets/css/topnav.css
+++ b/assets/css/topnav.css
@@ -5,7 +5,6 @@
     background-color: #0c4722;
     overflow: hidden;
     width: 100%;
-    height: 50px;
 }
 
 /* Style the links inside the navigation bar */
